# s3-sync

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
s3sync/: __init__.py
s3sync/controllers/: interface.py  localtos3.py  s3tolocal.py  s3tos3.py
s3sync/repository/: __init__.py  interface.py  tinydb_repo.py
s3sync/services/: local.py
tests/schemas/: local_test.py  s3_test.py
tests/services/: CheckKey_Local.py  cservice.txt  local_test.py
tests/utils/: util_test.py
