[tool.poetry]
name = "s3sync"
version = "0.1.0"
description = "Sync s3 from one source to another place"
authors = ["Ferdina Kusumah <ferdina.kusumah@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.14"
tqdm = "^4.66.1"
tinydb = "^4.8.0"
tinydbstorage = "^0.1.0"

[tool.poetry.scripts]
s3-sync = "s3sync:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
